tests/ui/nll/issue-54189.stderr
error[E0582]: binding for associated type `Output` references lifetime `'r`, which does not appear in the trait input types
  --> $DIR/issue-54189.rs:1:35
   |
LL | fn bug() -> impl for <'r> Fn() -> &'r () { || { &() } }
   |                                   ^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0582`.
